# opengl_engine

./: CMakeLists.txt  README.md  clear.sh
res/shaders/: LampShader.glsl  PhongShader.glsl  Shader.shader
src/: CMakeLists.txt  Camera.cpp  Camera.h  Cube.cpp  Cube.h  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  main.cpp  pch.h  test.cpp
